--- a/plugin.xml
+++ b/plugin.xml
@@ -37,6 +37,7 @@
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -77,18 +78,20 @@
 		<source-file src="src/android/libs/arm64-v8a/libBaiduMapSDK_base_v3_6_1.so" target-dir="libs/arm64-v8a" />
 		<source-file src="src/android/libs/arm64-v8a/libBaiduMapSDK_map_v3_6_1.so" target-dir="libs/arm64-v8a" />
 		<source-file src="src/android/libs/arm64-v8a/libBaiduMapSDK_util_v3_6_1.so" target-dir="libs/arm64-v8a" />
+		<source-file src="src/android/libs/arm64-v8a/liblocSDK6a.so" target-dir="libs/arm64-v8a" />
 
 		<source-file src="src/android/libs/armeabi/libhyphenate.so" target-dir="libs/armeabi" />
 		<source-file src="src/android/libs/armeabi/libBaiduMapSDK_base_v3_6_1.so" target-dir="libs/armeabi" />
 		<source-file src="src/android/libs/armeabi/libBaiduMapSDK_map_v3_6_1.so" target-dir="libs/armeabi" />
 		<source-file src="src/android/libs/armeabi/libBaiduMapSDK_util_v3_6_1.so" target-dir="libs/armeabi" />
+		<source-file src="src/android/libs/armeabi/liblocSDK6a.so" target-dir="libs/armeabi" />
 
 		<source-file src="src/android/libs/x86/libhyphenate.so" target-dir="libs/x86" />
 
 		<source-file src="src/android/libs/android-support-v4.jar" target-dir="libs" />
 		<source-file src="src/android/libs/BaiduLBS_Android.jar" target-dir="libs" />
 		<source-file src="src/android/libs/glide-3.6.1.jar" target-dir="libs" />
-		<source-file src="src/android/libs/hyphenatechat_3.1.2.jar" target-dir="libs" />
+		<source-file src="src/android/libs/hyphenatechat_3.1.3.jar" target-dir="libs" />
 		<source-file src="src/android/libs/org.apache.http.legacy.jar" target-dir="libs" />
 
 		<source-file src="src/android/hyphenate" target-dir="src/com" />
